syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "protobuf/gogoproto/gogo.proto";

package storage;

enum SubjectKind {
    UNSET_KIND              = 0;
    SERVICE_ACCOUNT         = 1;
    USER                    = 2;
    GROUP                   = 3;
}

// Properties of an individual k8s Role or ClusterRole.
//////////////////////////////////////////
message K8sRole {
    string id                               = 1 [(gogoproto.moretags) = "search:\"Role ID,hidden\""];
    string name                             = 2 [(gogoproto.moretags) = "search:\"Role\""];
    string namespace                        = 3 [(gogoproto.moretags) = "search:\"Namespace,store\""];
    string cluster_id                       = 4 [(gogoproto.moretags) = "search:\"Cluster ID,store,hidden\""];
    string cluster_name                     = 5 [(gogoproto.moretags) = "search:\"Cluster\""];
    bool cluster_role                       = 6 [(gogoproto.moretags) = "search:\"Cluster Role\""];
    map<string, string> labels              = 7 [(gogoproto.moretags) = "search:\"Label\""];
    map<string, string> annotations         = 8 [(gogoproto.moretags) = "search:\"Annotation\""];
    google.protobuf.Timestamp created_at    = 9;

    repeated PolicyRule rules               = 10;
}

// Properties of an individual rules that grant permissions to resources.
//////////////////////////////////////////
message PolicyRule {
    repeated string verbs             = 1;
    repeated string api_groups        = 2;
    repeated string resources         = 3;
    repeated string non_resource_urls = 4;
    repeated string resource_names    = 5;
}

// Properties of an individual k8s RoleBinding or ClusterRoleBinding.
//////////////////////////////////////////
message K8sRoleBinding {
    string id                               = 1 [(gogoproto.moretags) = "search:\"Role Binding ID,hidden\""];
    string name                             = 2 [(gogoproto.moretags) = "search:\"Role Binding\""];
    string namespace                        = 3 [(gogoproto.moretags) = "search:\"Namespace\""];
    string cluster_id                       = 4 [(gogoproto.moretags) = "search:\"Cluster ID,hidden\""];
    string cluster_name                     = 5 [(gogoproto.moretags) = "search:\"Cluster\""];
    bool cluster_role                       = 6 [(gogoproto.moretags) = "search:\"Cluster Role\""];
    map<string, string> labels              = 7 [(gogoproto.moretags) = "search:\"Label\""];
    map<string, string> annotations         = 8 [(gogoproto.moretags) = "search:\"Annotation\""];
    google.protobuf.Timestamp created_at    = 9;

    repeated Subject subjects               = 10;
    string role_id                          = 11 [(gogoproto.moretags) = "search:\"Role ID\""];
}

// Properties of an individual subjects who are granted roles via role bindings.
//////////////////////////////////////////
message Subject {
    SubjectKind kind    = 1 [(gogoproto.moretags) = "search:\"Subject Kind\""];
    string name         = 2 [(gogoproto.moretags) = "search:\"Subject\""];
    string namespace    = 3;
}